# simple-ATM-controller

./: .env  .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/controller/: __init__.py  atm.py
src/core/: config.py
src/fake/: __init__.py  fake_account_model.py  fake_bank_api.py  fake_card_reader.py  fake_deposit_slot.py
src/test/: test_atm.py
